--- a/style.css
+++ b/style.css
@@ -44,12 +44,12 @@ section{
 .contact .contact-content{
     display: flex;
     flex-wrap: wrap;
-    Bakirgn-items: center;
+    align-items: center;
     justify-content: space-between;
 }
 section .title{
     position: relative;
-    text-Bakirgn: center;
+    text-align: center;
     font-size: 40px;
     font-weight: 500;
     margin-bottom: 60px;
@@ -92,7 +92,7 @@ section .title::after{
 }
 .navbar .max-width{
     display: flex;
-    Bakirgn-items: center;
+    align-items: center;
     justify-content: space-between;
 }
 .navbar .logo a{
@@ -140,7 +140,7 @@ section .title::after{
     background: crimson;
     right: 30px;
     bottom: 10px;
-    text-Bakirgn: center;
+    text-align: center;
     line-height: 45px;
     color: #fff;
     z-index: 9999;
@@ -238,7 +238,7 @@ section .title::after{
     color: crimson;
 }
 .about .about-content .right p{
-    text-Bakirgn: justify;
+    text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
@@ -274,7 +274,7 @@ section .title::after{
 .services .serv-content .card{
     width: calc(33% - 20px);
     background: #222;
-    text-Bakirgn: center;
+    text-align: center;
     border-radius: 6px;
     padding: 50px 25px;
     cursor: pointer;
@@ -317,7 +317,7 @@ section .title::after{
     margin-bottom: 10px;
 }
 .skills .skills-content .left p{
-    text-Bakirgn: justify;
+    text-align: justify;
 }
 .skills .skills-content .left a{
     display: inline-block;
@@ -341,7 +341,7 @@ section .title::after{
 .skills .skills-content .right .info{
     display: flex;
     margin-bottom: 5px;
-    Bakirgn-items: center;
+    align-items: center;
     justify-content: space-between;
 }
 .skills .skills-content .right span{
@@ -366,17 +366,90 @@ section .title::after{
     width: 90%;
 }
 .skills-content .right .css::before{
-    width: 60%;
+    width: 70%;
 }
 .skills-content .right .js::before{
-    width: 80%;
+    width: 70%;
 }
-.skills-content .right .php::before{
-    width: 50%;
+.skills-content .right .java::before{
+    width: 80%;
 }
 .skills-content .right .mysql::before{
     width: 70%;
 }
+
+
+/* portfolio section styling */
+.portfolio{
+    color:#fff;
+    background: rgba(15, 227, 255, 0.884);
+}
+.portfolio .title::before{
+    background: #fff;
+}
+.portfolio .title::after{
+    background: rgba(15, 227, 255, 0.884);
+    content: "what i did";
+}
+.portfolio .carousel .card{
+    background: #222;
+    border-radius: 6px;
+    padding: 25px 35px;
+    text-align: center;
+    overflow: hidden;
+    transition: all 0.1s ease;
+}
+.portfolio .carousel .card:hover{
+    background: crimson;
+}
+.portfolio .carousel .card .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.1s ease;
+}
+.portfolio .carousel .card:hover .box{
+    transform: scale(1.05);
+}
+.portfolio .carousel .card .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+.portfolio .carousel .card img{
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 5px solid crimson;
+    transition: all 0.1s ease;
+}
+.portfolio .carousel .card:hover img{
+    border-color: #fff;
+}
+.owl-dots{
+    text-align: center;
+    margin-top: 20px;
+}
+.owl-dot{
+    height: 13px;
+    width: 13px;
+    margin: 0 5px;
+    outline: none!important;
+    border-radius: 50%;
+    border: 2px solid crimson!important;
+    transition: all 0.1s ease;
+}
+.owl-dot.active{
+    width: 35px;
+    border-radius: 14px;
+}
+.owl-dot.active,
+.owl-dot:hover{
+    background: crimson!important;
+}
+
 
 /* teams section styling */
 .teams .title::after{
@@ -386,7 +459,7 @@ section .title::after{
     background: #222;
     border-radius: 6px;
     padding: 25px 35px;
-    text-Bakirgn: center;
+    text-align: center;
     overflow: hidden;
     transition: all 0.3s ease;
 }
@@ -396,7 +469,7 @@ section .title::after{
 .teams .carousel .card .box{
     display: flex;
     flex-direction: column;
-    Bakirgn-items: center;
+    align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
 }
@@ -420,7 +493,7 @@ section .title::after{
     border-color: #fff;
 }
 .owl-dots{
-    text-Bakirgn: center;
+    text-align: center;
     margin-top: 20px;
 }
 .owl-dot{
@@ -454,7 +527,7 @@ section .title::after{
     margin-bottom: 10px;
 }
 .contact .contact-content .left p{
-    text-Bakirgn: justify;
+    text-align: justify;
 }
 .contact .contact-content .left .icons{
     margin: 10px 0;
@@ -462,7 +535,7 @@ section .title::after{
 .contact .contact-content .row{
     display: flex;
     height: 65px;
-    Bakirgn-items: center;
+    align-items: center;
 }
 .contact .contact-content .row .info{
     margin-left: 30px;
@@ -515,7 +588,7 @@ section .title::after{
 }
 .contact .right form .button-area{
   display: flex;
-  Bakirgn-items: center;
+  align-items: center;
 }
 .right form .button-area button{
   color: #fff;
@@ -541,7 +614,7 @@ footer{
     background: #111;
     padding: 15px 23px;
     color: #fff;
-    text-Bakirgn: center;
+    text-align: center;
 }
 footer span a{
     color: crimson;
@@ -580,7 +653,7 @@ footer span a:hover{
         left: -100%;
         top: 0;
         background: #111;
-        text-Bakirgn: center;
+        text-align: center;
         padding-top: 80px;
         transition: all 0.3s ease;
     }
@@ -623,6 +696,10 @@ footer span a:hover{
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
+    .portfolio .serv-content .card{
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
     .skills .skills-content .column,
     .contact .contact-content .column{
         width: 100%;
@@ -644,6 +721,9 @@ footer span a:hover{
         font-size: 20px;
     }
     .services .serv-content .card{
+        width: 100%;
+    }
+    .portfolio .serv-content .card{
         width: 100%;
     }
 }
