--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color: #04aa6d;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -88,7 +88,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: #04aa6d;
 }
 .navbar .max-width{
     display: flex;
@@ -101,7 +101,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: crimson;
+    color: #04aa6d;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -120,7 +120,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: crimson;
+    color: #04aa6d;
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -137,7 +137,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background: #04aa6d;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -193,23 +193,23 @@ section .title::after{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: crimson;
+    color: #04aa6d;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background: #04aa6d;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #04aa6d;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: crimson;
+    color: #04aa6d;
     background: none;
 }
 
@@ -235,25 +235,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: crimson;
+    color: #04aa6d;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background: #04aa6d;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #04aa6d;
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: crimson;
+    color: #04aa6d;
     background: none;
 }
 
@@ -281,7 +281,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: crimson;
+    background: #04aa6d;
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -291,7 +291,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: crimson;
+    color: #04aa6d;
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -321,18 +321,18 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: crimson;
+    background: #04aa6d;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #04aa6d;
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: crimson;
+    color: #04aa6d;
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -360,7 +360,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background: #04aa6d;
 }
 .skills-content .right .html::before{
     width: 90%;
@@ -403,7 +403,7 @@ section .title::after{
     transition: all 0.1s ease;
 }
 .portfolio .carousel .card:hover{
-    background: crimson;
+    background: #04aa6d;
 }
 .portfolio .carousel .card .box{
     display: flex;
@@ -425,7 +425,7 @@ section .title::after{
     width: 800px;
     object-fit: cover;
     border-radius: 5%;
-    border: 5px solid crimson;
+    border: 5px solid #04aa6d;
     transition: all 0.1s ease;
 }
 .portfolio .carousel .card:hover img{
@@ -441,7 +441,7 @@ section .title::after{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid crimson!important;
+    border: 2px solid #04aa6d!important;
     transition: all 0.1s ease;
 }
 .owl-dot.active{
@@ -450,7 +450,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: crimson!important;
+    background: #04aa6d!important;
 }
 
 
@@ -467,7 +467,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover{
-    background: crimson;
+    background: #04aa6d;
 }
 .teams .carousel .card .box{
     display: flex;
@@ -489,7 +489,7 @@ section .title::after{
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid crimson;
+    border: 5px solid #04aa6d;
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{
@@ -505,7 +505,7 @@ section .title::after{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid crimson!important;
+    border: 2px solid #04aa6d!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -514,7 +514,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: crimson!important;
+    background: #04aa6d!important;
 }
 
 /* contact section styling */
@@ -545,7 +545,7 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color: #04aa6d;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
@@ -604,12 +604,12 @@ section .title::after{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: crimson;
-  border: 2px solid crimson;
+  background: #04aa6d;
+  border: 2px solid #04aa6d;
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-  color: crimson;
+  color: #04aa6d;
   background: none;
 }
 /* footer section styling */
@@ -620,7 +620,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: crimson;
+    color: #04aa6d;
     text-decoration: none;
 }
 footer span a:hover{
